Add VVB power schedule, modify scenes, rename storage
Add a new graph for the VVB power schedule
Modify scenes
Change name of 'Förråd' to 'Vilgots rum'

--- a/configuration.yaml
+++ b/configuration.yaml
@@ -29,6 +29,7 @@ media_player:
       cd: 'ChromeCast Audio'
       game: 'Xbox'
       strm-box: 'Chromecast Ultra'
+      pc: 'WiiU'
 
 spotcast:
   sp_dc: !secret sp_dc
