Enable xmas lights and change power consuption UI

--- a/configuration.yaml
+++ b/configuration.yaml
@@ -146,6 +146,8 @@ homeassistant:
   # Customization file
   customize: !include customize.yaml
   external_url: !secret external_url
+  currency: SEK
+  country: SE
   
 energy:
 
