--- a/lights.yaml
+++ b/lights.yaml
@@ -1,15 +1,7 @@
 - platform: template
   lights:
-#    shelf_light_bedroom:
-#      friendly_name: "Bänklampa sovrum"
-#      value_template: "{{ states('switch.uttag2') }}"
-#      turn_on:
-#        service: switch.turn_on
-#        entity_id: switch.uttag2
-#      turn_off:
-#        service: switch.turn_off
-#        entity_id: switch.uttag2
     lights_green_house:
+      unique_id: zgr_lights_green_house
       friendly_name: "Belysning växthus"
       value_template: "{{ states('switch.uttag5') }}"
       turn_on:
@@ -19,6 +11,7 @@
         service: switch.turn_off
         entity_id: switch.uttag5
     vitrine_diningroom:
+      unique_id: zgr_vitrine_diningroom
       friendly_name: "Vitrinskåp matsal"
       value_template: "{{ states('switch.shelly_plug_2') }}"
       turn_on:
@@ -27,33 +20,16 @@
       turn_off:
         service: switch.turn_off
         entity_id: switch.shelly_plug_2
-#    growing_light_dining_room:
-#      friendly_name: "Växtlampa Matsal"
-#      value_template: "{{ states('switch.shelly_plug_1') }}"
-#      turn_on:
-#        service: switch.turn_on
-#        entity_id: switch.shelly_plug_1
-#      turn_off:
-#        service: switch.turn_off
-#        entity_id: switch.shelly_plug_1
     light_terrace:
+      unique_id: zgr_light_terrace
       friendly_name: "Ljusslinga altan"
-      value_template: "{{ states('switch.ljusslinga_altan') }}"
+      value_template: "{{ states('switch.ljusslinga_altan_socket') }}"
       turn_on:
         service: switch.turn_on
-        entity_id: switch.ljusslinga_altan
+        entity_id: switch.ljusslinga_altan_socket
       turn_off:
         service: switch.turn_off
-        entity_id: switch.ljusslinga_altan
-#    growing_light_laundry:
-#      friendly_name: "Växtlampa tvättstuga"
-#      value_template: "{{ states('switch.uttag4') }}"
-#      turn_on:
-#        service: switch.turn_on
-#        entity_id: switch.uttag4
-#      turn_off:
-#        service: switch.turn_off
-#        entity_id: switch.uttag4
+        entity_id: switch.ljusslinga_altan_socket
 #    window_light_dining_room:
 #      friendly_name: "Fönsterlampa Matsal"
 #      value_template: "{{ states('switch.uttag4') }}"
@@ -64,6 +40,7 @@
 #        service: switch.turn_off
 #        entity_id: switch.uttag4
     xmas_light_front:
+      unique_id: zgr_xmas_light_front
       friendly_name: "Julbelysning framsida"
       value_template: "{{ states('switch.julbelysning_framsida') }}"
       turn_on:
@@ -73,6 +50,7 @@
         service: switch.turn_off
         entity_id: switch.julbelysning_framsida
     candelabra_living_room_middle:
+      unique_id: zgr_candelabra_living_room_middle
       friendly_name: "Ljusstake vardagsrum mitten"
       value_template: "{{ states('switch.uttag3') }}"
       turn_on:
@@ -81,16 +59,18 @@
       turn_off:
         service: switch.turn_off
         entity_id: switch.uttag3
-#    xmas_tree:
-#      friendly_name: "Julgran"
-#      value_template: "{{ states('switch.julgran') }}"
-#      turn_on:
-#        service: switch.turn_on
-#        entity_id: switch.julgran
-#      turn_off:
-#        service: switch.turn_off
-#        entity_id: switch.julgran
+    xmas_tree:
+     friendly_name: "Julgran"
+     unique_id: zgr_xmas_tree
+     value_template: "{{ states('switch.uttag2') }}"
+     turn_on:
+        service: switch.turn_on
+        entity_id: switch.uttag2
+     turn_off:
+        service: switch.turn_off
+        entity_id: switch.uttag2
     candelabra_kitchen:
+      unique_id: zgr_candelabra_kitchen
       friendly_name: "Ljusstake kök"
       value_template: "{{ states('switch.uttag7') }}"
       turn_on:
@@ -100,6 +80,7 @@
         service: switch.turn_off
         entity_id: switch.uttag7
     candelabra_living_room:
+      unique_id: zgr_candelabra_living_room
       friendly_name: "Ljusstake vardagsrum"
       value_template: "{{ states('switch.uttag6') }}"
       turn_on:
@@ -109,6 +90,7 @@
         service: switch.turn_off
         entity_id: switch.uttag6
     candelabra_dining_room:
+      unique_id: zgr_candelabra_dining_room
       friendly_name: "Ljusstake matsal"
       value_template: "{{ states('switch.uttag4') }}"
       turn_on:
@@ -117,48 +99,116 @@
       turn_off:
         service: switch.turn_off
         entity_id: switch.uttag4
-#    candelabra_bedroom:
-#      friendly_name: "Ljusstake sovrum"
-#      value_template: "{{ states('switch.uttag6') }}"
-#      turn_on:
-#        service: switch.turn_on
-#        entity_id: switch.uttag6
-#      turn_off:
-#        service: switch.turn_off
-#        entity_id: switch.uttag6
+
 - platform: group
   name: Sänglampor
+  unique_id: zgr_sanglampor_group
   entities:
     - light.sanglampa_katrin
     - light.sanglampa_isac
+
 - platform: group
-  name: Sovrum
-  entities:
-    - light.sanglampa_katrin
-    - light.sanglampa_isac
-    - light.taklampa_sovrum
-- platform: group
-  name: Barnrum
+  name: Vilgots rum
+  unique_id: zgr_vilgots_rum_group
   entities:
     - light.ballonglampa
     - light.molnlampa
+    
 - platform: group
-  name: Vardagsrum
+  name: Novas rum
+  unique_id: zgr_novas_rum_group
   entities:
     - light.golvlampa
+
+- platform: group
+  name: Vardagsrum
+  unique_id: zgr_vardagsrum_group
+  entities:
     - light.vagglampa
     - light.fonsterlampa_hoger
     - light.fonsterlampa_mitten
     - light.fonsterlampa_vanster
     - light.guldlampa
+
+- platform: group
+  name: Hall
+  unique_id: zgr_hall_group
+  entities:
+    - light.hall_1
+    - light.hall_2
+    - light.hall_3
+    - light.hall_4
+
+- platform: group
+  name: Utomhus
+  unique_id: zgr_utomhus_group
+  entities:
+    - light.belysning_garageport
+    - light.lampa_forradsdorr
+    - light.lampa_altandorren
+    - light.lampa_altan
+    - light.light_terrace
+    - light.belysning_framsida
+
+- platform: group
+  name: Matsal
+  unique_id: zgr_matsal_group
+  entities:
+    - light.bordslampa
+    - light.vitrine_diningroom
+    - light.window_light_dining_room
+
+- platform: group
+  name: Sovrum
+  unique_id: zgr_sovrum_group
+  entities:
+    - light.sanglampa_isac
+    - light.sanglampa_katrin
+    - light.shelf_light_bedroom
+    - light.taklampa_sovrum
+
+- platform: group
+  name: Kontor
+  unique_id: zgr_kontor_group
+  entities:
+    - light.fonsterlampa_kontor
+
 - platform: group
   name: Julbelysning inomhus
+  unique_id: zgr_julbelysning_inomhus_group
   entities:
     - light.candelabra_living_room
     - light.candelabra_living_room_middle
     - light.candelabra_dining_room
     - light.candelabra_kitchen
-#    - light.candelabra_bedroom
     - light.julstjarna_vanster
     - light.julstjarna_hoger
-#    - light.xmas_tree
+    - light.xmas_tree
+#    - light.candelabra_bedroom
+
+- platform: group
+  name: Julbelysning utomhus
+  unique_id: zgr_julbelysning_utomhus_group
+  entities:
+    - light.xmas_light_front
+
+- platform: group
+  name: Växtbelysning
+  unique_id: zgr_vaxtbelysning_group
+  entities:
+    - light.growing_light_laundry
+    - light.growing_light_kitchen
+    - light.growing_light_dining_room
+
+- platform: group
+  name: Inomhus
+  unique_id: zgr_inomhus_group
+  entities:
+    - light.hall
+    - light.matsal
+    - light.sovrum
+    - light.vilgots_rum
+    - light.hall
+    - light.kontor
+    - light.vardagsrum
+    - light.novas_rum
