--- a/sensors.yaml
+++ b/sensors.yaml
@@ -19,10 +19,10 @@
         icon_template: mdi:clock-outline
         value_template: >
           {% set t1 = utcnow() %} 
-          {% set t2 = states.group.bedroom_lights.last_changed %}
+          {% set t2 = states.light.sovrum.last_changed %}
           {% set hours = (t1 - t2).total_seconds() / 3600 %}
           {% set minutes = (t1 - t2).total_seconds()/60 - (hours | int)*60 %}
-          {% if is_state("group.bedroom_lights", "off") -%}
+          {% if is_state("light.sovrum", "off") -%}
           {%- if hours < 10 -%}
           0{{ hours | int }}
           {%- else -%}
@@ -34,44 +34,44 @@
           :{{ (minutes | int) }} timmar sedan
           {%- endif %}
           {%- else -%} {%- endif %}
-      barnrum_slackt_tid:
-        friendly_name: Tid sedan barnrum släcktes
-        icon_template: mdi:clock-outline
-        value_template: >
-          {% set t1 = utcnow() %} {% set t2 = states.light.barnrum.last_changed %}
-          {% set hours = (t1 - t2).total_seconds() / 3600 %}  {% set minutes = (t1 -
-          t2).total_seconds() / 60 - (hours | int)*60%}  {% if
-          is_state("light.barnrum", "off") -%}
-          {%- if hours < 10 -%}
-          0{{ hours | int }}
-          {%- else -%}
-          {{ hours | int }}
-          {%- endif %}
-          {%- if minutes < 10 -%}
-          :0{{ (minutes | int) }} timmar sedan
-          {%- else -%}
-          :{{ (minutes | int) }} timmar sedan
-          {%- endif %}
-          {%- else -%} {%- endif %}
-      barnrum_rorelse_tid:
-        friendly_name: Tid sedan det upptäcktes rörelse i barnrum
-        icon_template: mdi:run
-        value_template: > 
-          {% set t1 = utcnow() %} {% set t2 = states.binary_sensor.barnrum_rorelsesensor.last_changed %}
-          {% set hours = (t1 - t2).total_seconds() / 3600 %}  {% set minutes = (t1 -
-          t2).total_seconds() / 60 - (hours | int)*60%}  {% if
-          is_state("binary_sensor.barnrum_rorelsesensor", "off") -%}
-          {%- if hours < 10 -%}
-          0{{ hours | int }}
-          {%- else -%}
-          {{ hours | int }}
-          {%- endif %}
-          {%- if minutes < 10 -%}
-          :0{{ (minutes | int) }} timmar sedan
-          {%- else -%}
-          :{{ (minutes | int) }} timmar sedan
-          {%- endif %}
-          {%- else -%} {%- endif %}
+    #   barnrum_slackt_tid:
+    #     friendly_name: Tid sedan barnrum släcktes
+    #     icon_template: mdi:clock-outline
+    #     value_template: >
+    #       {% set t1 = utcnow() %} {% set t2 = states.light.barnrum.last_changed %}
+    #       {% set hours = (t1 - t2).total_seconds() / 3600 %}  {% set minutes = (t1 -
+    #       t2).total_seconds() / 60 - (hours | int)*60%}  {% if
+    #       is_state("light.barnrum", "off") -%}
+    #       {%- if hours < 10 -%}
+    #       0{{ hours | int }}
+    #       {%- else -%}
+    #       {{ hours | int }}
+    #       {%- endif %}
+    #       {%- if minutes < 10 -%}
+    #       :0{{ (minutes | int) }} timmar sedan
+    #       {%- else -%}
+    #       :{{ (minutes | int) }} timmar sedan
+    #       {%- endif %}
+    #       {%- else -%} {%- endif %}
+    #   barnrum_rorelse_tid:
+    #     friendly_name: Tid sedan det upptäcktes rörelse i barnrum
+    #     icon_template: mdi:run
+    #     value_template: > 
+    #       {% set t1 = utcnow() %} {% set t2 = states.binary_sensor.barnrum_rorelsesensor.last_changed %}
+    #       {% set hours = (t1 - t2).total_seconds() / 3600 %}  {% set minutes = (t1 -
+    #       t2).total_seconds() / 60 - (hours | int)*60%}  {% if
+    #       is_state("binary_sensor.barnrum_rorelsesensor", "off") -%}
+    #       {%- if hours < 10 -%}
+    #       0{{ hours | int }}
+    #       {%- else -%}
+    #       {{ hours | int }}
+    #       {%- endif %}
+    #       {%- if minutes < 10 -%}
+    #       :0{{ (minutes | int) }} timmar sedan
+    #       {%- else -%}
+    #       :{{ (minutes | int) }} timmar sedan
+    #       {%- endif %}
+    #       {%- else -%} {%- endif %}
   - platform: tellstick
     only_named:
      - id: 183
@@ -130,6 +130,11 @@
         value_template: '{{ states.sensor.electricity_meter.attributes["payload"]["0100480700FF"][0] * (10 ** states.sensor.electricity_meter.attributes["payload"]["0100480700FF"][1][0]) }}'
         unit_of_measurement: 'V'
         icon_template: mdi:current-ac
+      total_energy_in:
+        friendly_name: 'Total energy in'
+        value_template: '{{ states.sensor.electricity_meter.attributes["payload"]["0100010800FF"][0] / 1000}}'
+        unit_of_measurement: 'kWh'
+        icon_template: mdi:home-lightning-bolt
   - platform: template
     sensors:
       daily_energy_rounded:
@@ -153,10 +158,12 @@
   - platform: template
     sensors:
       water_heater_current_consumption:
+        friendly_name: VVB nuvarande förbrukning
         value_template: "{{ states('sensor.vvb_fas1_current_consumption') | float + states('sensor.vvb_fas2_current_consumption') | float + states('sensor.vvb_fas3_current_consumption') | float}}"
         unit_of_measurement: 'kW'
         icon_template: mdi:lightning-bolt
       water_heater_total_consumption:
+        friendly_name: VVB total förbrukning
         value_template: "{{ states('sensor.vvb_fas1_total_consumption') | float + states('sensor.vvb_fas2_total_consumption') | float + states('sensor.vvb_fas3_total_consumption') | float}}"
         unit_of_measurement: 'kWh'
         icon_template: mdi:lightning-bolt
