--- a/configuration.yaml
+++ b/configuration.yaml
@@ -1,23 +1,3 @@
-binary_sensor:
-  - platform: ping
-    host: 192.168.1.1
-    name: router
-    count: 1
-    scan_interval: 10
-  - platform: ping
-    host: www.google.com
-    name: google
-    count: 1
-    scan_interval: 10
-  - platform: workday
-    name: workday_today
-    country: SE
-  - platform: workday
-    name: workday_tomorrow
-    country: SE
-    days_offset: 1
-    
-
 media_player:
   - platform: onkyo
     host: 192.168.1.41
@@ -248,10 +228,10 @@ sun:
 
 # Log deCONZ event to detect button events
 logger:
-   default: warning
-   logs:
-      homeassistant.components.pyscript: debug
-      custom_components.pyscript: debug
+   default: info
+#   logs:
+#      homeassistant.components.pyscript: debug
+#      custom_components.pyscript: debug
 #      # Uncomment the below to get deCONZ button events
 #      pydeconz: debug
 #      homeassistant.components.deconz: debug
@@ -267,16 +247,16 @@ tts:
   - platform: google_translate
     service_name: google_say
     
-ios:
-  actions:
-    - name: SVT1
-      background_color: "#0363F4"
-      label:
-        text: "Titta på SVT1"
-        color: "#ffffff"
-      icon:
-        icon: television
-        color: "#000000"
+# ios:
+#   actions:
+#     - name: SVT1
+#       background_color: "#0363F4"
+#       label:
+#         text: "Titta på SVT1"
+#         color: "#ffffff"
+#       icon:
+#         icon: television
+#         color: "#000000"
 
 group: !include groups.yaml
 automation: !include automations.yaml
@@ -285,3 +265,4 @@ sensor: !include sensors.yaml
 light: !include lights.yaml
 scene: !include scenes.yaml
 switch: !include switches.yaml
+binary_sensor: !include binary_sensors.yaml
